# trip_monitoring

./: .gitignore  CLAUDE.md  FEATURES_tmp.html  POSTGRESQL.md  TEST_REPORT_TASK8.md  add_performance_indexes.py  ai_service.py  app.py  clear_database_data.py  data_upload_template.numbers  data_upload_template1.csv  debug_location_logs.py  debug_utilization.py  migrate_delivery_order.py  migrate_new_columns.py  migration.py  migration_3-10-2026.py  migration_data_detailed_remarks.py  migration_trip_completed.py  models.py  pyproject.toml  requirements.txt  scheduler.py  test_endpoints.sh  test_kpi_endpoint.py  test_validation_fix.py
docs/: dashboard-user-guide.md  design-guidelines.md  style-guide.html
instance/: trip_monitoring.db
migrations/: add_dashboard_indexes.py  add_location_log.py  migrate_taiwain.py
misc/: ARCHIVE_PLAN.md  FEATURES.md  FUEL_EFFICIENCY_FIX.md  LCL_OPTIMIZATIONS.md  LCL_SUMMARY_COLUMNS_UPDATE.md  LLM-SQLITEDB.md  for_gantt_chart.md  styleguide-incomplete.html
static/: style.css
templates/: add_data.html  add_schedule.html  ai.html  archive_admin.html  backload.html  base.html  daily_vehicle_counts.html  dashboard.html  edit_cluster.html  edit_data.html  edit_lcl_summary.html  edit_time_log.html  edit_user.html  lcl_details.html  lcl_summary.html  lcl_upload.html  location_logs.html  manage_clusters.html  manage_manpower.html  manage_users.html  manage_vehicles.html  odo_logs.html  reports.html  time_logs.html  upload_clusters.html  view_backload.html  view_data.html  view_schedule.html  view_scheduled_data.html
(+26 files in other folders)
