[project]
name = "trip-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.44",
    "flask-login>=0.6.3",
    "apscheduler>=3.11.2",
    "gunicorn>=25.1.0",
]
